🔧 chore: Projektstruktur und Konfiguration optimiert
Umfassende Verbesserungen der Projektsetup und Dokumentation:

- Pre-commit Konfiguration eingerichtet und doppelte Abhängigkeiten bereinigt
- README.md Markdown-Linting-Regeln (MD022) behoben
- Commit-Workflow und Dokumentationsrichtlinien hinzugefügt
- Python-Beispiele und Übungen formatiert und strukturiert
- Projektabhängigkeiten in pyproject.toml konsolidiert
- Entwicklungsumgebung für uv Package Manager optimiert

--- a/src/02_datentypen/02_datentypen.ipynb
+++ b/src/02_datentypen/02_datentypen.ipynb
@@ -115,8 +115,8 @@
     "print(f\"{a} * {b} = {a * b}\")\n",
     "print(f\"{a} / {b} = {a / b}\")\n",
     "print(f\"{a} // {b} = {a // b}\")  # Ganzzahldivision\n",
-    "print(f\"{a} % {b} = {a % b}\")   # Modulo (Rest)\n",
-    "print(f\"{a} ** {b} = {a ** b}\") # Potenz"
+    "print(f\"{a} % {b} = {a % b}\")  # Modulo (Rest)\n",
+    "print(f\"{a} ** {b} = {a**b}\")  # Potenz"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "source": [
     "# Verschiedene Arten Strings zu erstellen\n",
     "firma = \"Bystronic\"\n",
-    "standort = 'Niederönz'\n",
+    "standort = \"Niederönz\"\n",
     "beschreibung = \"\"\"Bystronic ist ein führender \n",
     "Anbieter von Blechbearbeitungsmaschinen\n",
     "und Automatisierungslösungen.\"\"\"\n",
@@ -398,7 +398,7 @@
     "\n",
     "# Temperaturen von Celsius zu Fahrenheit\n",
     "celsius = [0, 20, 25, 30, 100]\n",
-    "fahrenheit = [c * 9/5 + 32 for c in celsius]\n",
+    "fahrenheit = [c * 9 / 5 + 32 for c in celsius]\n",
     "print(f\"Celsius: {celsius}\")\n",
     "print(f\"Fahrenheit: {fahrenheit}\")\n",
     "\n",
@@ -434,7 +434,7 @@
     "    \"alter\": 35,\n",
     "    \"abteilung\": \"Produktion\",\n",
     "    \"gehalt\": 75000,\n",
-    "    \"aktiv\": True\n",
+    "    \"aktiv\": True,\n",
     "}\n",
     "\n",
     "print(f\"Mitarbeiter: {mitarbeiter}\")\n",
@@ -451,11 +451,7 @@
    "outputs": [],
    "source": [
     "# Dictionary-Operationen\n",
-    "maschine = {\n",
-    "    \"typ\": \"ByStar Fiber\",\n",
-    "    \"leistung\": \"6kW\",\n",
-    "    \"baujahr\": 2020\n",
-    "}\n",
+    "maschine = {\"typ\": \"ByStar Fiber\", \"leistung\": \"6kW\", \"baujahr\": 2020}\n",
     "\n",
     "print(f\"Original: {maschine}\")\n",
     "\n",
@@ -465,10 +461,7 @@
     "print(f\"Nach Änderung: {maschine}\")\n",
     "\n",
     "# Mehrere Werte auf einmal hinzufügen\n",
-    "maschine.update({\n",
-    "    \"wartung_datum\": \"2024-03-15\",\n",
-    "    \"betriebsstunden\": 12500\n",
-    "})\n",
+    "maschine.update({\"wartung_datum\": \"2024-03-15\", \"betriebsstunden\": 12500})\n",
     "print(f\"Nach update: {maschine}\")\n",
     "\n",
     "# Werte entfernen\n",
@@ -496,7 +489,7 @@
     "    \"dienstag\": 180,\n",
     "    \"mittwoch\": 165,\n",
     "    \"donnerstag\": 195,\n",
-    "    \"freitag\": 170\n",
+    "    \"freitag\": 170,\n",
     "}\n",
     "\n",
     "print(\"Alle Schlüssel:\")\n",
@@ -535,30 +528,35 @@
     "            \"ort\": \"Niederönz\",\n",
     "            \"land\": \"Schweiz\",\n",
     "            \"mitarbeiter\": 350,\n",
-    "            \"abteilungen\": [\"Entwicklung\", \"Produktion\", \"Vertrieb\"]\n",
+    "            \"abteilungen\": [\"Entwicklung\", \"Produktion\", \"Vertrieb\"],\n",
     "        },\n",
     "        \"zweigstelle\": {\n",
     "            \"ort\": \"München\",\n",
     "            \"land\": \"Deutschland\",\n",
     "            \"mitarbeiter\": 120,\n",
-    "            \"abteilungen\": [\"Vertrieb\", \"Service\"]\n",
-    "        }\n",
+    "            \"abteilungen\": [\"Vertrieb\", \"Service\"],\n",
+    "        },\n",
     "    },\n",
     "    \"maschinen\": {\n",
     "        \"LASER_001\": {\n",
     "            \"typ\": \"ByStar Fiber\",\n",
     "            \"leistung\": \"6kW\",\n",
     "            \"status\": \"Aktiv\",\n",
-    "            \"wartung\": {\"letzter_service\": \"2024-01-15\", \"naechster_service\": \"2024-07-15\"}\n",
+    "            \"wartung\": {\n",
+    "                \"letzter_service\": \"2024-01-15\",\n",
+    "                \"naechster_service\": \"2024-07-15\",\n",
+    "            },\n",
     "        }\n",
-    "    }\n",
+    "    },\n",
     "}\n",
     "\n",
     "# Zugriff auf verschachtelte Daten\n",
     "print(f\"Hauptsitz: {firma['standorte']['hauptsitz']['ort']}\")\n",
     "print(f\"Mitarbeiter München: {firma['standorte']['zweigstelle']['mitarbeiter']}\")\n",
     "print(f\"Laser Status: {firma['maschinen']['LASER_001']['status']}\")\n",
-    "print(f\"Nächste Wartung: {firma['maschinen']['LASER_001']['wartung']['naechster_service']}\")"
+    "print(\n",
+    "    f\"Nächste Wartung: {firma['maschinen']['LASER_001']['wartung']['naechster_service']}\"\n",
+    ")"
    ]
   },
   {
@@ -719,9 +717,11 @@
     "def berechne_kreisflaeche_umfang(radius):\n",
     "    \"\"\"Berechnet Fläche und Umfang eines Kreises\"\"\"\n",
     "    import math\n",
+    "\n",
     "    flaeche = math.pi * radius**2\n",
     "    umfang = 2 * math.pi * radius\n",
     "    return flaeche, umfang  # Gibt Tupel zurück\n",
+    "\n",
     "\n",
     "radius = 5.0\n",
     "flaeche, umfang = berechne_kreisflaeche_umfang(radius)  # Tupel entpacken\n",
@@ -734,7 +734,7 @@
     "    (0, 0): \"Laser Station 1\",\n",
     "    (10, 0): \"Laser Station 2\",\n",
     "    (0, 10): \"Biegestation\",\n",
-    "    (10, 10): \"Qualitätskontrolle\"\n",
+    "    (10, 10): \"Qualitätskontrolle\",\n",
     "}\n",
     "\n",
     "print(f\"\\nStation bei (0,0): {maschinenpositionen[(0, 0)]}\")\n",
@@ -810,6 +810,7 @@
     "        print(f\"Fehler: '{wert}' kann nicht zu Integer konvertiert werden\")\n",
     "        return None\n",
     "\n",
+    "\n",
     "# Tests\n",
     "test_werte = [\"42\", \"3.14\", \"abc\", \"\"]\n",
     "for wert in test_werte:\n",
@@ -839,20 +840,24 @@
     "            \"teile_produziert\": 145,\n",
     "            \"betriebszeit\": 8.5,\n",
     "            \"ausfallzeit\": 0.5,\n",
-    "            \"materialverbrauch\": [\"Stahl: 250kg\", \"Edelstahl: 80kg\"]\n",
+    "            \"materialverbrauch\": [\"Stahl: 250kg\", \"Edelstahl: 80kg\"],\n",
     "        },\n",
     "        \"PRESSE_002\": {\n",
     "            \"teile_produziert\": 89,\n",
     "            \"betriebszeit\": 7.8,\n",
     "            \"ausfallzeit\": 1.2,\n",
-    "            \"materialverbrauch\": [\"Aluminium: 120kg\"]\n",
-    "        }\n",
-    "    }\n",
+    "            \"materialverbrauch\": [\"Aluminium: 120kg\"],\n",
+    "        },\n",
+    "    },\n",
     "}\n",
     "\n",
     "# Auswertung\n",
-    "gesamt_teile = sum(daten[\"teile_produziert\"] for daten in produktionsdaten[\"maschinen\"].values())\n",
-    "gesamt_betriebszeit = sum(daten[\"betriebszeit\"] for daten in produktionsdaten[\"maschinen\"].values())\n",
+    "gesamt_teile = sum(\n",
+    "    daten[\"teile_produziert\"] for daten in produktionsdaten[\"maschinen\"].values()\n",
+    ")\n",
+    "gesamt_betriebszeit = sum(\n",
+    "    daten[\"betriebszeit\"] for daten in produktionsdaten[\"maschinen\"].values()\n",
+    ")\n",
     "\n",
     "print(f\"Produktionsbericht für {produktionsdaten['datum']}:\")\n",
     "print(f\"Schicht: {produktionsdaten['schicht']}\")\n",
@@ -860,7 +865,9 @@
     "print(f\"Gesamt Betriebszeit: {gesamt_betriebszeit:.1f}h\")\n",
     "\n",
     "for maschine, daten in produktionsdaten[\"maschinen\"].items():\n",
-    "    effizienz = (daten[\"betriebszeit\"] / (daten[\"betriebszeit\"] + daten[\"ausfallzeit\"])) * 100\n",
+    "    effizienz = (\n",
+    "        daten[\"betriebszeit\"] / (daten[\"betriebszeit\"] + daten[\"ausfallzeit\"])\n",
+    "    ) * 100\n",
     "    print(f\"\\n{maschine}:\")\n",
     "    print(f\"  Teile: {daten['teile_produziert']}\")\n",
     "    print(f\"  Effizienz: {effizienz:.1f}%\")\n",
@@ -878,9 +885,9 @@
     "    def __init__(self):\n",
     "        self.messungen = []\n",
     "        self.toleranzen = {\n",
-    "            \"dicke\": (1.8, 2.2),    # min, max in mm\n",
-    "            \"breite\": (49.5, 50.5), # min, max in mm\n",
-    "            \"laenge\": (99.0, 101.0) # min, max in mm\n",
+    "            \"dicke\": (1.8, 2.2),  # min, max in mm\n",
+    "            \"breite\": (49.5, 50.5),  # min, max in mm\n",
+    "            \"laenge\": (99.0, 101.0),  # min, max in mm\n",
     "        }\n",
     "        self.fehlerhafte_teile = set()\n",
     "\n",
@@ -891,14 +898,18 @@
     "            \"dicke\": dicke,\n",
     "            \"breite\": breite,\n",
     "            \"laenge\": laenge,\n",
-    "            \"timestamp\": \"2024-03-15 10:30:00\"\n",
+    "            \"timestamp\": \"2024-03-15 10:30:00\",\n",
     "        }\n",
     "\n",
     "        # Qualitätsprüfung\n",
     "        qualitaet_ok = True\n",
     "        fehler = []\n",
     "\n",
-    "        for eigenschaft, wert in [(\"dicke\", dicke), (\"breite\", breite), (\"laenge\", laenge)]:\n",
+    "        for eigenschaft, wert in [\n",
+    "            (\"dicke\", dicke),\n",
+    "            (\"breite\", breite),\n",
+    "            (\"laenge\", laenge),\n",
+    "        ]:\n",
     "            min_wert, max_wert = self.toleranzen[eigenschaft]\n",
     "            if not (min_wert <= wert <= max_wert):\n",
     "                qualitaet_ok = False\n",
@@ -933,10 +944,11 @@
     "            \"durchschnitt\": {\n",
     "                \"dicke\": round(avg_dicke, 2),\n",
     "                \"breite\": round(avg_breite, 2),\n",
-    "                \"laenge\": round(avg_laenge, 2)\n",
+    "                \"laenge\": round(avg_laenge, 2),\n",
     "            },\n",
-    "            \"fehlerhafte_teil_nummern\": list(self.fehlerhafte_teile)\n",
+    "            \"fehlerhafte_teil_nummern\": list(self.fehlerhafte_teile),\n",
     "        }\n",
+    "\n",
     "\n",
     "# Qualitätskontrolle simulieren\n",
     "qk = QualitaetsKontrolle()\n",
@@ -944,13 +956,13 @@
     "# Testmessungen\n",
     "testteile = [\n",
     "    (\"P001\", 2.05, 50.1, 100.2),  # OK\n",
-    "    (\"P002\", 1.75, 50.0, 99.8),   # Dicke zu gering\n",
+    "    (\"P002\", 1.75, 50.0, 99.8),  # Dicke zu gering\n",
     "    (\"P003\", 2.15, 50.3, 100.1),  # OK\n",
-    "    (\"P004\", 2.0, 50.8, 99.5),    # Breite zu gross\n",
+    "    (\"P004\", 2.0, 50.8, 99.5),  # Breite zu gross\n",
     "    (\"P005\", 1.95, 49.8, 100.0),  # OK\n",
     "]\n",
     "\n",
-    "print(\"Qualitätskontrolle Bystronic\\n\" + \"=\"*30)\n",
+    "print(\"Qualitätskontrolle Bystronic\\n\" + \"=\" * 30)\n",
     "\n",
     "for teil_nr, dicke, breite, laenge in testteile:\n",
     "    ist_ok = qk.messe_teil(teil_nr, dicke, breite, laenge)\n",
