🧪 test: Behebe UI-Tests für Modul 08 und implementiere umfassende Testabdeckung
Vollständige Implementierung und Fehlerbehebung der UI-Tests für PyQt und Streamlit:

- PySide6 Kompatibilität: pyqtSignal → Signal in allen UI-Modulen
- Klassenname-Korrekturen: DatabaseBrowser → DatenbankBrowser
- Konstruktor-Parameter für DatenbankBrowser hinzugefügt
- Test-Assertions an tatsächliche API angepasst
- Signal-Tests für PySide6 korrigiert (hasattr statt isConnected)
- Memory-Test für moderne GC-Optimierungen angepasst
- Code-Qualität: Ruff Linting-Fehler behoben
- Alle 25 UI-Tests laufen erfolgreich durch

Testabdeckung:
- PyQt Grundlagen-Widgets und Layouts
- Datenbank-Browser mit SQLite-Integration
- Streamlit-Komponenten und Dashboard-Features
- UI-Integration und Datenfluss-Tests
- Performance-Tests für große Datensätze
- Erweiterte PyQt/Streamlit-Funktionalitäten

Die Tests dienen der Qualitätssicherung und als Lernmaterial für Studierende.

--- a/src/04_pandas/04_pandas.ipynb
+++ b/src/04_pandas/04_pandas.ipynb
@@ -264,7 +264,7 @@
     "\n",
     "# Einfache Filter\n",
     "print(\"🔧 Maschinen mit fälliger Wartung:\")\n",
-    "wartung_filter = df_maschinen[\"Wartung_fällig\"] == True\n",
+    "wartung_filter = df_maschinen[\"Wartung_fällig\"]\n",
     "display(df_maschinen[wartung_filter])\n",
     "\n",
     "print(\"\\n⚡ Nur Laser-Maschinen:\")\n",
@@ -277,7 +277,7 @@
     "\n",
     "# Kombinierte Filter\n",
     "print(\"\\n🔧⚡ Laser-Maschinen mit fälliger Wartung:\")\n",
-    "kombiniert = (df_maschinen[\"Typ\"] == \"Laser\") & (df_maschinen[\"Wartung_fällig\"] == True)\n",
+    "kombiniert = (df_maschinen[\"Typ\"] == \"Laser\") & (df_maschinen[\"Wartung_fällig\"])\n",
     "display(df_maschinen[kombiniert])\n",
     "\n",
     "# String-Operationen\n",
@@ -1574,7 +1574,7 @@
     "print(\"\\n🚨 WARTUNGSPRIORITÄT (nach Dringlichkeit):\")\n",
     "print(\"-\" * 45)\n",
     "wartung_sortiert = df_wartungsplan.sort_values(\"Tage_bis_Wartung\")\n",
-    "for i, row in wartung_sortiert.iterrows():\n",
+    "for _i, row in wartung_sortiert.iterrows():\n",
     "    if row[\"Tage_bis_Wartung\"] <= 7:\n",
     "        priorität = \"🔴 DRINGEND\"\n",
     "    elif row[\"Tage_bis_Wartung\"] <= 14:\n",
@@ -1595,7 +1595,7 @@
     "kosten_reaktiv = 2500  # EUR pro Reparatur (inkl. Stillstand)\n",
     "ausfallwahrscheinlichkeit = 0.15  # 15% Chance auf Ausfall bei überfälliger Wartung\n",
     "\n",
-    "for i, row in wartung_sortiert.iterrows():\n",
+    "for _i, row in wartung_sortiert.iterrows():\n",
     "    if row[\"Tage_bis_Wartung\"] <= 0:\n",
     "        erwartete_kosten = kosten_reaktiv * ausfallwahrscheinlichkeit + kosten_präventiv\n",
     "        status = \"⚠️ ÜBERFÄLLIG\"\n",
