--- a/src/06_datenimport/datenimport_tutorial.ipynb
+++ b/src/06_datenimport/datenimport_tutorial.ipynb
@@ -306,7 +306,7 @@
     "            data_lines = lines[data_start_row_index:]\n",
     "\n",
     "            parsed_data = []\n",
-    "            for line_num, line in enumerate(data_lines):\n",
+    "            for _line_num, line in enumerate(data_lines):\n",
     "                parts = line.strip().split(delimiter)\n",
     "                if len(parts) >= len(columns):\n",
     "                    parsed_data.append(parts[: len(columns)])\n",
