🐛 fix: Behebe Deprecation-Warnungen und Fehler in UI-Beispielen
Umfassende Fixes für PyQt- und Streamlit-Anwendungen:

Streamlit-Fixes:
- Pandas frequency 'H' → 'h' in allen Streamlit-Apps
- use_container_width → width='stretch' Parameter-Migration
- Styler.applymap() → Styler.map() Methodenupdate
- NameError in Plotly hovertemplate behoben

PyQt-Fixes:
- SQLite datetime adapter für Python 3.12+ Kompatibilität
- Matplotlib backend_qtagg für PySide6 Unterstützung
- Unsupported CSS backdrop-filter entfernt
- Persistente SQLite-DB statt In-Memory für Stabilität

Code-Qualität:
- Alle Ruff-Linting-Fehler behoben
- Import-Reihenfolge optimiert
- Exception-Handling spezifiziert
- Autor-Attribution auf 'Daniel Senften' aktualisiert

Alle Streamlit-Apps laufen jetzt ohne Warnungen oder Fehler.

--- a/src/01_grundlagen/01_python_grundlagen.adoc
+++ b/src/01_grundlagen/01_python_grundlagen.adoc
@@ -12,7 +12,7 @@
 
 == Willkommen bei Python! 🐍
 
-Herzlich willkommen zum Python Grundkurs für Bystronic-Entwickler! In diesem ersten Kapitel lernen Sie die Grundlagen der Python-Programmierung kennen und richten Ihre Entwicklungsumgebung ein.
+Herzlich willkommen zum Python-Kurs von Daniel Senften! In diesem ersten Kapitel lernen Sie die Grundlagen der Python-Programmierung kennen und richten Ihre Entwicklungsumgebung ein.
 
 === Warum Python?
 
